# tubgpt

./: .gitignore  README.md  pyproject.toml
tub_bot/: data.py  diacritic_utils.py  main.py  openai_service.py  pinecone_service.py  query.py  terminal_colors.py  tub_mediawiki_bot.py
