[tool.poetry]
name = "tub-bot"
version = "0.1.0"
description = ""
authors = ["Christopher Razavian <pooya72@gmail.com>"]
readme = "README.md"
packages = [{include = "tub_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
sentence-transformers = "^2.2.2"
pinecone-client = "^2.2.2"
openai = "^0.27.8"
pywikibot = "^8.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
